{
    "name": "ArenaControlls",
    "maps": [
        {
            "name": "Build",
            "id": "409a48ec-dea4-43f8-b674-b5b685e81afe",
            "actions": [
                {
                    "name": "MoveCursor",
                    "type": "Value",
                    "id": "4fe2de5b-bccd-44e6-81ec-76bc1f92285d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeSelectionLeft",
                    "type": "Button",
                    "id": "d08316ad-fa41-4ca1-8987-da26da38f9b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeSelectionRight",
                    "type": "Button",
                    "id": "10943835-8c16-4471-8c00-a03583eb461a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "55727604-2532-4bb1-a4e4-424f5f77e0c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateSelectedLeft",
                    "type": "Button",
                    "id": "435da0fa-2143-4928-91c7-513f04374d57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateSelectedRight",
                    "type": "Button",
                    "id": "be2abf01-8e67-4edc-a528-89edff364313",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee7ada67-6657-4094-b14d-581d8bc6983d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48dda291-96ea-4f43-a9d7-061a8593a6cc",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ChangeSelectionLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2c65c95-ed13-4487-a75d-e119025fe540",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ChangeSelectionRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f91dd7ab-8858-45e0-ac96-56f3ed9a88b1",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bea5fab-d3a4-4bb0-9988-95b608f46031",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "RotateSelectedLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f79ee459-5921-433c-a698-cf0d87923cb5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "RotateSelectedRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Fight",
            "id": "b6fb6696-5033-4892-b725-92151bcc038c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3726a5af-68d0-4f90-a913-5c92a97c5d68",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "2b32a590-cd93-4263-9018-3f706ed3767d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DistanceAttack",
                    "type": "Button",
                    "id": "ebdb8b0f-9083-4847-9cfc-9e7ddc9facb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrongDistanceAttack",
                    "type": "Button",
                    "id": "f2ad5f9a-e00d-4228-813b-199384b1cb51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shield",
                    "type": "Button",
                    "id": "d50b046a-2c91-4459-b1e6-9649e20dd62c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NearAttack",
                    "type": "Button",
                    "id": "ef1d5698-1de7-4b23-b55d-a56168d5ec58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa3b5df6-19fd-4ad4-8ba7-9b5ad3e77000",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f8b63f6-18e1-42f8-9e77-338e3a9f1658",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e4fcfc4-1c05-42e6-bf6e-abed1a1dd9da",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "DistanceAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1527429-b9f3-48a7-bb32-f40502679c86",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "StrongDistanceAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50be8765-6eb3-4d09-8595-31fcc5df92df",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2aedfb00-f6ee-4c06-b57e-88e3fc24a08c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "NearAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}